--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!-- TradingView Widget BEGIN -->
 <div class="tradingview-widget-container">
   <div class="tradingview-widget-container__widget"></div>
-  <div class="tradingview-widget-copyright"><a href="https://www.tradingview.com/symbols/CME_MINI-ES1!/" rel="noopener" target="_blank"><span class="blue-text">ES1! Quotes</span></a> by TradingView</div>
+  <div class="tradingview-widget-copyright"><a href="https://www.tradingview.com/symbols/OANDA-SPX500USD/" rel="noopener" target="_blank"><span class="blue-text">SPX500USD Quotes</span></a> by TradingView</div>
   <script type="text/javascript" src="https://s3.tradingview.com/external-embedding/embed-widget-mini-symbol-overview.js" async>
   {
-  "symbol": "CME_MINI:ES1!",
+  "symbol": "OANDA:SPX500USD",
   "width": 350,
   "height": 220,
   "locale": "en",
